Added about us & events page

--- a/_template.html
+++ b/_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Us | The Mission Pinball Framework</title>
+    <title>The Mission Pinball Framework</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,55 +74,6 @@
 <!-- Begin Page Content-->
 
 <div class="container">
-
-    <p>The Mission Pinball Framework is being built by pinball-loving volunteers who are
-        building, maintaining, and supporting MPF in their spare time. Everything we build
-        is completely free &amp; open source, even for commercial use. We do it for the love of pinball!</p>
-
-    <h2>Core developers</h2>
-
-        <ul>
-            <li>Brian Madden</li>
-            <li>Gabe Knuth</li>
-            <li>Quinn Capen</li>
-            <li>Jan Kantert</li>
-        </ul>
-
-    <p>Want to help out? We'd love it! Reach out to us in the
-        <a href="https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google Group</a>, or read our
-        <a href="http://docs.missionpinball.org/en/stable/contribute/index.html">Contributor's Guide</a>.
-        Even if you're not a coder, we'd love help with docs, how to guides, and proofreading!
-    </p>
-
-    <h2>Learn about MPF on the Boom Go Pinball Podcast</h2>
-
-    <p>In April 2016, MPF developer Brian Madden spent 3 hours talking to Adam Godfrey on the
-        <a href="http://www.stitcher.com/podcast/boom-go-pinball-podcast">Boom Go Pinball Podcast</a>
-        about the Mission Pinball Framework. They talked about:</p>
-
-    <ul>
-        <li>How MPF came to be</li>
-        <li>Our approach to pinball software</li>
-        <li>"Programming" with config files versus "real" code</li>
-        <li>What's new in MPF 0.30</li>
-        <li>A walk-through of how you implement game logic in MPF</li>
-        <li>Our long-term vision for the future of MPF</li>
-    </ul>
-
-    <p>Adam broke the conversation into three separate episodes:</p>
-
-    <ul>
-        <li><a href="http://www.stitcher.com/podcast/boom-go-pinball-podcast/e/bgep76the-mission-man-part-1-of-3-43943245">Part 1 (43min)</a></li>
-        <li><a href="http://www.stitcher.com/podcast/boom-go-pinball-podcast/e/bgep77the-mission-man-part-2-of-3-43943244">Part 2 (53min)</a></li>
-        <li><a href="http://www.stitcher.com/podcast/boom-go-pinball-podcast/e/43943243">Part 3 (83min)</a></li>
-    </ul>
-
-    <h2>MPF on social media</h2>
-
-    <p>You can also find Mission Pinball on <a href="https://twitter.com/missionpinball">Twitter</a>,
-        <a href="https://www.flickr.com/photos/missionpinball">Flickr</a>,
-        <a href="https://www.youtube.com/user/missionpinball">YouTube</a>, and
-        <a href="https://github.com/missionpinball/">GitHub</a>.</p>
 
 </div>
 
