--- a/events.html
+++ b/events.html
@@ -1,1 +1,138 @@
-Live Events
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Live Events | The Mission Pinball Framework</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/0fb2a42c3c.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/mpf.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Oswald:300,400,700" rel="stylesheet">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/icons/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/icons/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="images/icons/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="images/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="images/icons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/icons/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/icons/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="The Mission Pinball Framework"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="images/icons/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="images/icons/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="images/icons/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="images/icons/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="images/icons/mstile-310x310.png" />
+
+</head>
+<body>
+
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>The Mission Pinball Framework</h1>
+    <p>Software for powering real pinball machines. 100% free. 100% open source.</p>
+  </div>
+</div>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><img src="images/mpf-flag-tiny.png"></a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="http://docs.missionpinball.org">Docs</a></li>
+        <li><a href="http://docs.missionpinball.org/en/stable/tutorial/index.html">Tutorial</a></li>
+        <li><a href="https://groups.google.com/forum/#!forum/mpf-users">Forum</a></li>
+        <li><a href="/events.html">Live Events</a></li>
+        <li><a href="/about.html">About</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://twitter.com/missionpinball"><span class="fa fa-twitter fa-lg"></span></a></li>
+        <li><a href="https://www.youtube.com/missionpinball"><span class="fa fa-youtube fa-lg" aria-hidden="true"></span></a></li>
+        <li><a href="https://github.com/missionpinball/"><span class="fa fa-github fa-lg"></span></a></li>
+        <li><a href="https://www.flickr.com/missionpinball"><span class="fa fa-flickr fa-lg"></span></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Begin Page Content-->
+
+<div class="container">
+
+    <p>The creators of the Mission Pinball Framework as well as users who are building pinball
+    machines love to get together to talk and play pinball. Here's a list of the upcoming events
+    where we'll be.</p>
+    <p>If you'll be at any of these events, drop us a line in the
+        <a href="https://groups.google.com/forum/#!forum/mpf-users">MPF Users Google Group</a> and let's meet up!
+    </p>
+
+    <h2>Upcoming Events. Let's grab a beer and talk pinball!</h2>
+
+    <ul>
+        <li>Chicago Pinball Expo (in the FAST Pinball booth), Chicago, Oct 12-16, 2016</li>
+        <li>Northwest Pinball and Arcade Show (in the FAST Pinball booth), Tacoma, Washington, June 5-7, 2017</li>
+    </ul>
+
+    <br/>
+
+    <h2>Past Events</h2>
+
+    <b>2016</b>
+
+    <ul>
+        <li>Northwest Pinball and Arcade Show (in the FAST Pinball booth), Tacoma, Washington, June 3-5, 2016</li>
+    </ul>
+
+    <b>2015</b>
+
+    <ul>
+        <li>30th Chaos Communication Congress, Hamburg, Germany, Dec 27-30, 2015</li>
+        <li>Mission Pinball / FAST Pinball Seattle-area meet-up, Nov 19, 2015</li>
+        <li>Chicago Pinball Expo (in the FAST Pinball booth), Oct 14-18, 2015</li>
+        <li>Chaos Communication Camp 2015, Zehdenick, Germany, August 13-17, 2015</li>
+        <li>California Extreme (in the FAST Pinball booth), Santa Clara, California, July 18-19, 2015</li>
+        <li>Southern Fried Gameroom Expo (talk), Atlanta, June 19-21, 2015</li>
+        <li>Northwest Pinball Expo (in the FAST Pinball booth), Tacoma, Washington, June 5-7, 2015</li>
+        <li>SoCal Arcade Expo (talk), Banning, California, Jan 16-18, 2015</li>
+    </ul>
+
+    <b>2014</b>
+
+    <ul>
+        <li>Mission Pinball meet-up at the Seattle Pinball Museum, Nov 12, 2014</li>
+        <li>Chicago Pinball Expo (in the P-ROC booth), Oct 15-19, 2014</li>
+    </ul>
+
+</div>
+
+<!-- End Page Content-->
+
+<br/><br/>
+
+<footer class="container-fluid text-center">
+  <p>Code licensed <a href="https://opensource.org/licenses/MIT">MIT</a>.
+     Docs & Text <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0.</a>
+     Website <a href="https://github.com/missionpinball/missionpinball-website">source</a>.
+     <br/>
+     <a href="https://groups.google.com/forum/#!topic/mpf-users/7I-phnq9rOs">Archive of posts from the old website</a>.
+  </p>
+</footer>
+
+</body>
+</html>
