--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="images/mpf-flag-tiny.png"></a>
+      <a class="navbar-brand" href="/"><img src="images/mpf-flag-tiny.png"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -319,13 +319,17 @@
   </div>
 </div>
 
-
-
+<!-- End Page Content-->
 
 <br/><br/>
 
 <footer class="container-fluid text-center">
-  <p>Code licensed <a href="https://opensource.org/licenses/MIT">MIT</a>. Docs & Text <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0.</a> Website <a href="https://github.com/missionpinball/missionpinball-website">source</a></p>
+  <p>Code licensed <a href="https://opensource.org/licenses/MIT">MIT</a>.
+     Docs & Text <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0.</a>
+     Website <a href="https://github.com/missionpinball/missionpinball-website">source</a>.
+     <br/>
+     <a href="https://groups.google.com/forum/#!topic/mpf-users/7I-phnq9rOs">Archive of posts from the old website</a>.
+  </p>
 </footer>
 
 </body>
