more updates & code cleanup

--- a/_template.html
+++ b/_template.html
@@ -2,93 +2,137 @@
 <html lang="en">
 <head>
     <title>The Mission Pinball Framework</title>
-
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://use.fontawesome.com/0fb2a42c3c.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/mpf.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Oswald:300,400,700" rel="stylesheet">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/icons/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icons/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/icons/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/icons/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/icons/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/icons/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="images/icons/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="images/icons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="images/icons/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="images/icons/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="images/icons/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="The Mission Pinball Framework"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="images/icons/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="images/icons/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="images/icons/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="images/icons/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="images/icons/mstile-310x310.png" />
-
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href=
+    "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel=
+    "stylesheet">
+    <script src=
+    "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+    </script>
+    <script src=
+    "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    </script>
+    <script src="https://use.fontawesome.com/0fb2a42c3c.js">
+    </script>
+    <link href="css/mpf.css" rel="stylesheet" type="text/css">
+    <link href=
+    "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Oswald:300,400,700"
+    rel="stylesheet">
+    <link href="images/icons/apple-touch-icon-57x57.png" rel=
+    "apple-touch-icon-precomposed" sizes="57x57">
+    <link href="images/icons/apple-touch-icon-114x114.png" rel=
+    "apple-touch-icon-precomposed" sizes="114x114">
+    <link href="images/icons/apple-touch-icon-72x72.png" rel=
+    "apple-touch-icon-precomposed" sizes="72x72">
+    <link href="images/icons/apple-touch-icon-144x144.png" rel=
+    "apple-touch-icon-precomposed" sizes="144x144">
+    <link href="images/icons/apple-touch-icon-60x60.png" rel=
+    "apple-touch-icon-precomposed" sizes="60x60">
+    <link href="images/icons/apple-touch-icon-120x120.png" rel=
+    "apple-touch-icon-precomposed" sizes="120x120">
+    <link href="images/icons/apple-touch-icon-76x76.png" rel=
+    "apple-touch-icon-precomposed" sizes="76x76">
+    <link href="images/icons/apple-touch-icon-152x152.png" rel=
+    "apple-touch-icon-precomposed" sizes="152x152">
+    <link href="images/icons/favicon-196x196.png" rel="icon" sizes="196x196"
+    type="image/png">
+    <link href="images/icons/favicon-96x96.png" rel="icon" sizes="96x96" type=
+    "image/png">
+    <link href="images/icons/favicon-32x32.png" rel="icon" sizes="32x32" type=
+    "image/png">
+    <link href="images/icons/favicon-16x16.png" rel="icon" sizes="16x16" type=
+    "image/png">
+    <link href="images/icons/favicon-128.png" rel="icon" sizes="128x128" type=
+    "image/png">
+    <meta content="The Mission Pinball Framework" name="application-name">
+    <meta content="#FFFFFF" name="msapplication-TileColor">
+    <meta content="images/icons/mstile-144x144.png" name=
+    "msapplication-TileImage">
+    <meta content="images/icons/mstile-70x70.png" name=
+    "msapplication-square70x70logo">
+    <meta content="images/icons/mstile-150x150.png" name=
+    "msapplication-square150x150logo">
+    <meta content="images/icons/mstile-310x150.png" name=
+    "msapplication-wide310x150logo">
+    <meta content="images/icons/mstile-310x310.png" name=
+    "msapplication-square310x310logo">
 </head>
 <body>
-
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>The Mission Pinball Framework</h1>
-    <p>Software for powering real pinball machines. 100% free. 100% open source.</p>
-  </div>
-</div>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/"><img src="images/mpf-flag-tiny.png"></a>
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1>The Mission Pinball Framework</h1>
+            <p>Software for powering real pinball machines. 100% free. 100%
+            open source.</p>
+        </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="http://docs.missionpinball.org">Docs</a></li>
-        <li><a href="http://docs.missionpinball.org/en/stable/tutorial/index.html">Tutorial</a></li>
-        <li><a href="https://groups.google.com/forum/#!forum/mpf-users">Forum</a></li>
-        <li><a href="/events.html">Live Events</a></li>
-        <li><a href="/about.html">About</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://twitter.com/missionpinball"><span class="fa fa-twitter fa-lg"></span></a></li>
-        <li><a href="https://www.youtube.com/missionpinball"><span class="fa fa-youtube fa-lg" aria-hidden="true"></span></a></li>
-        <li><a href="https://github.com/missionpinball/"><span class="fa fa-github fa-lg"></span></a></li>
-        <li><a href="https://www.flickr.com/missionpinball"><span class="fa fa-flickr fa-lg"></span></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-target="#myNavbar"
+                data-toggle="collapse" type="button"><span class=
+                "icon-bar"></span> <span class="icon-bar"></span> <span class=
+                "icon-bar"></span></button> <a class="navbar-brand" href=
+                "/"><img src="images/mpf-flag-tiny.png"></a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="http://docs.missionpinball.org">Docs</a>
+                    </li>
+                    <li>
+                        <a href=
+                        "http://docs.missionpinball.org/en/stable/tutorial/index.html">
+                        Tutorial</a>
+                    </li>
+                    <li>
+                        <a href=
+                        "https://groups.google.com/forum/#!forum/mpf-users">Forum</a>
+                    </li>
+                    <li>
+                        <a href="/events.html">Live Events</a>
+                    </li>
+                    <li>
+                        <a href="/about.html">About</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href=
+                        "https://twitter.com/missionpinball"><span class=
+                        "fa fa-twitter fa-lg"></span></a>
+                    </li>
+                    <li>
+                        <a href=
+                        "https://www.youtube.com/missionpinball"><span aria-hidden="true"
+                        class="fa fa-youtube fa-lg"></span></a>
+                    </li>
+                    <li>
+                        <a href=
+                        "https://github.com/missionpinball/"><span class=
+                        "fa fa-github fa-lg"></span></a>
+                    </li>
+                    <li>
+                        <a href=
+                        "https://www.flickr.com/missionpinball"><span class=
+                        "fa fa-flickr fa-lg"></span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav><!-- Begin Page Content-->
+    <div class="container"></div><!-- End Page Content-->
+    <br>
+    <br>
+    <footer class="container-fluid text-center">
+        <p>Code licensed <a href="https://opensource.org/licenses/MIT">MIT</a>.
+        Docs & Text <a href="http://creativecommons.org/licenses/by/4.0/">CC BY
+        4.0.</a> Website <a href=
+        "https://github.com/missionpinball/missionpinball-website">source</a>.<br>
 
-<!-- Begin Page Content-->
-
-<div class="container">
-
-</div>
-
-<!-- End Page Content-->
-
-<br/><br/>
-
-<footer class="container-fluid text-center">
-  <p>Code licensed <a href="https://opensource.org/licenses/MIT">MIT</a>.
-     Docs & Text <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0.</a>
-     Website <a href="https://github.com/missionpinball/missionpinball-website">source</a>.
-     <br/>
-     <a href="https://groups.google.com/forum/#!topic/mpf-users/7I-phnq9rOs">Archive of posts from the old website</a>.
-  </p>
-</footer>
-
+        <a href=
+        "https://groups.google.com/forum/#!topic/mpf-users/7I-phnq9rOs">Archive
+        of posts from the old website</a>.</p>
+    </footer>
 </body>
 </html>
