--- a/index.html
+++ b/index.html
@@ -641,11 +641,11 @@
                         not have to pay us anything, and you do not have to
                         release your machine’s source code if you don’t want
                         to.</p>
-                        <p>We don’t “own” MPF any more than you do. So go nuts.
-                        Rip us off. Take the code. Make it yours. Don’t give us
-                        credit… It’s all good! Seriously. We’re just putting
-                        the code out there which will hopefully lead to more
-                        pinball in the world!</p>
+                        <p>We don’t &quot;own&quot; MPF any more than you do.
+                        So go nuts. Rip us off. Take the code. Make it yours.
+                        Don’t give us credit… It’s all good! Seriously. We’re
+                        just putting the code out there which will hopefully
+                        lead to more pinball in the world!</p>
                     </div>
                 </div>
             </div>
@@ -696,7 +696,9 @@
                         "width:100%"></a>
                     </div>
                     <div class="panel-footer">
-                        <p>The MPF Users Google Group is very active and full
+                        <p><a href=
+                        "https://groups.google.com/forum/#!forum/mpf-users">The
+                        MPF Users Google Group</a> is very active and full
                         of pinball-loving people using MPF and helping each
                         other.</p>
                         <p><a href=
@@ -725,18 +727,18 @@
                         and so far we've spent over 4,000 hours working on
                         MPF.</p>
                         <p>We put our money where our mouths are:</p><a href=
-                        'https://coveralls.io/github/missionpinball/'><img alt=
+                        'https://coveralls.io/github/missionpinball/'><img class="center-block" alt=
                         'Coverage Status' src=
                         'https://coveralls.io/repos/github/missionpinball/mpf/badge.svg?branch=dev'></a>
-                        <p>Automated Testing Coverage</p><a href=
-                        'https://travis-ci.org/missionpinball/'><img alt=
+                        <p class="small text-center">Automated Testing Coverage</p><a href=
+                        'https://travis-ci.org/missionpinball/'><img class="center-block" alt=
                         'Test Status' src=
                         'https://travis-ci.org/missionpinball/mpf.svg?branch=dev'></a>
-                        <p>Build Status</p><a href=
-                        'https://landscape.io/github/missionpinball/mpf/'><img alt='Health Status'
-                        src=
+                        <p class="small text-center">Build Status</p><a href=
+                        'https://landscape.io/github/missionpinball/mpf/'><img class="center-block"
+                        alt='Health Status' src=
                         'https://landscape.io/github/missionpinball/mpf/dev/landscape.svg?style=flat'></a>
-                        <p>Health Status</p>
+                        <p class="small text-center">Health Status</p>
                         <p>Our goal is that you can use MPF to run a commercial-grade professional
                         machine in revenue service in a public location.</p>
                         <p>Want to help make the pinball world a better place?
@@ -748,6 +750,7 @@
             </div>
         </div>
     </div>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-sm-2"></div>
