--- a/_template.html
+++ b/_template.html
@@ -114,7 +114,7 @@
                     </li>
                     <li>
                         <a href=
-                        "https://www.flickr.com/missionpinball"><span class=
+                        "https://www.flickr.com/groups/missionpinball"><span class=
                         "fa fa-flickr fa-lg"></span></a>
                     </li>
                 </ul>
