changed "devices" to "mechs"

--- a/index.html
+++ b/index.html
@@ -269,17 +269,17 @@
                     <div class="panel-heading">
                         <a href=
                         "http://docs.missionpinball.org/en/stable/devices/index.html">
-                        Pinball Devices</a>
+                        Pinball Mechs</a>
                     </div>
                     <div class="panel-body">
                         <a href=
                         "http://docs.missionpinball.org/en/stable/devices/index.html">
                         <img alt="Image" class="img-responsive" src=
-                        "images/devices.jpg" style="width:100%"></a>
+                        "images/mechs.jpg" style="width:100%"></a>
                     </div>
                     <div class="panel-footer">
                         <p>MPF includes built-in support for just about every
-                        kinds of pinball device, including:</p>
+                        kinds of pinball mechanism, including:</p>
                         <ul>
                             <li>
                                 <a href=
