add more sound details to home page

--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
                                 "http://docs.missionpinball.org/en/latest/sound/">
                                 Multi-track audio</a>
                             </li>
+                            <li>Track-based volume and sound control</li>
                             <li>
                                 <a href=
                                 "http://docs.missionpinball.org/en/latest/config/sounds.html">
@@ -606,6 +607,7 @@
                                 "http://docs.missionpinball.org/en/latest/sound/variations.html">
                                 Sound variation</a>
                             </li>
+                            <li>Stream sound files from disk, or load into memory</li>
                         </ul>
                     </div>
                 </div>
