more small sound changes to home page

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                     </div>
                     <div class="panel-footer">
                         <p>MPF includes a custom-built audio library built on
-                        SDL2 and SDL_Mixer which was designed for pinball
+                        SDL2 and GStreamer which was designed for pinball
                         environments.</p>
                         <ul>
                             <li>
@@ -582,6 +582,7 @@
                                 Multi-track audio</a>
                             </li>
                             <li>Track-based volume and sound control</li>
+                            <li>Sound queue, sound expiration, and sound priorities</li>
                             <li>
                                 <a href=
                                 "http://docs.missionpinball.org/en/latest/config/sounds.html">
