fix links in home page

--- a/index.html
+++ b/index.html
@@ -283,108 +283,113 @@
                         <ul>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/switches">
+                                "http://docs.missionpinball.org/en/latest/mechs/switches">
                                 Switches</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/coils">
+                                "http://docs.missionpinball.org/en/latest/mechs/coils">
                                 Coils</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/lights">
+                                "http://docs.missionpinball.org/en/latest/mechs/lights">
                                 Lights</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/leds">
+                                "http://docs.missionpinball.org/en/latest/mechs/leds">
                                 RGB LEDs</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/flippers">
+                                "http://docs.missionpinball.org/en/latest/mechs/flippers">
                                 Flippers</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/accelerometers">
+                                "http://docs.missionpinball.org/en/latest/mechs/accelerometers">
                                 Accelerometers</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/troughs">
+                                "http://docs.missionpinball.org/en/latest/mechs/troughs">
                                 Troughs</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/plungers">
-                                Plungers</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/plungers">
+                                Plungers & ball launch devices</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/drop_targets">
-                                Drop Targets</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/ball_devices">
+                                VUKs, ball locks, ball capture devices</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/gis">
+                                "http://docs.missionpinball.org/en/latest/mechs/targets">
+                                Targets (drop targets, standups, kicking targets)</a>
+                            </li>
+                            <li>
+                                <a href=
+                                "http://docs.missionpinball.org/en/latest/mechs/gis">
                                 GI</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/flashers">
+                                "http://docs.missionpinball.org/en/latest/mechs/flashers">
                                 Flashers</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/loops">
-                                Loops/Orbits/Ramps</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/loops">
+                                Loops/orbits/ramps</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/kickbacks">
-                                Kickback Lanes</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/kickbacks">
+                                Kickback lanes</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/magnets">
+                                "http://docs.missionpinball.org/en/latest/mechs/magnets">
                                 Magnets</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/playfields">
-                                Multiple Playfields</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/motors">
+                                Motors</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/pop_bumpers">
-                                Pop Bumpers</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/playfields">
+                                Multiple playfields</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/score_reels">
-                                Mechanical Score Reels</a>
+                                "http://docs.missionpinball.org/en/latest/mechs/pop_bumpers">
+                                Pop bumpers</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/servos">
+                                "http://docs.missionpinball.org/en/latest/mechs/score_reels">
+                                Mechanical score reels</a>
+                            </li>
+                            <li>
+                                <a href=
+                                "http://docs.missionpinball.org/en/latest/mechs/servos">
                                 Servos</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/slingshots">
+                                "http://docs.missionpinball.org/en/latest/mechs/slingshots">
                                 Slingshots</a>
                             </li>
                             <li>
                                 <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/spinners">
+                                "http://docs.missionpinball.org/en/latest/mechs/spinners">
                                 Spinners</a>
-                            </li>
-                            <li>
-                                <a href=
-                                "http://docs.missionpinball.org/en/latest/devices/targets">
-                                Standup Targets</a>
                             </li>
                         </ul>
                     </div>
@@ -456,6 +461,11 @@
                                 <a href=
                                 "http://docs.missionpinball.org/en/latest/game_logic/shots">
                                 Shots & shot groups</a>
+                            </li>
+                            <li>
+                                <a href=
+                                "http://docs.missionpinball.org/en/latest/game_logic/combo_switches">
+                                Combo switches (flipper cancel, super skill shot, etc.)</a>
                             </li>
                             <li>
                                 <a href=
@@ -722,7 +732,7 @@
                     <div class="panel-footer">
                         <p>The people working on MPF are passionate about the
                         project. We average dozens of code check-ins per week,
-                        and so far we've spent over 4,000 hours working on
+                        and so far we've spent over 5,000 hours working on
                         MPF.</p>
                         <p>We put our money where our mouths are:</p><a href=
                         'https://coveralls.io/github/missionpinball/'><img class="center-block" alt=
@@ -741,7 +751,7 @@
                         machine in revenue service in a public location.</p>
                         <p>Want to help make the pinball world a better place?
                         <a href=
-                        "http://docs.missionpinball.org/en/latest/contribute/">
+                        "http://docs.missionpinball.org/en/latest/about/contributing.html">
                         Join us!</a></p>
                     </div>
                 </div>
