Added feature to sound section

--- a/index.html
+++ b/index.html
@@ -593,6 +593,7 @@
                             </li>
                             <li>Track-based volume and sound control</li>
                             <li>Sound queue, sound expiration, and sound priorities</li>
+                            <li>Brickwall limiting</li>
                             <li>
                                 <a href=
                                 "http://docs.missionpinball.org/en/latest/config/sounds.html">
