--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </div>
                     <div class="panel-footer">
                         <p>MPF includes built-in support for just about every
-                        kinds of pinball mechanism, including:</p>
+                        kind of pinball mechanism, including:</p>
                         <ul>
                             <li>
                                 <a href=
